fix: alignment issue on desktop screen size

--- a/styling/about.css
+++ b/styling/about.css
@@ -32,7 +32,7 @@
 }
 
 .hero-text h1 {
-	font-size: 1.7rem;
+	font-size: 1.5rem;
 	margin-bottom: 20px;
 }
 
@@ -176,7 +176,7 @@
 .tech-stack {
 	display: flex;
 	flex-wrap: wrap;
-	gap: 1rem;
+	gap: 1.5rem;
 	list-style: none;
 	padding: 0;
 	margin: 0;
